tests/e2e/dot_mutation_chain_float2.error
Error: syntax error in story at line 1

1|    a = 1.5.approxEqual(value: 1).sqrt()
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

E0117: Invalid mutation `sqrt`
