tests/e2e/dot_mutation_chain_float2.story
a = 1.5.approxEqual(value: 1).sqrt()
